--- a/agentweb-core/build.gradle
+++ b/agentweb-core/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -34,14 +34,15 @@ android {
 }
 dependencies {
     compileOnly fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compileOnly 'com.download.library:Downloader:4.1.2'
-    compileOnly "com.android.support:design:${SUPPORT_LIB_VERSION}"
-    compileOnly "com.android.support:support-v4:${SUPPORT_LIB_VERSION}"
+    //compileOnly 'com.download.library:Downloader:4.1.2'
+    compileOnly 'com.google.android.material:material:1.0.0'
+    compileOnly 'androidx.legacy:legacy-support-v4:1.0.0'
     compileOnly fileTree(include: ['*.jar'], dir: 'providedLibs')
+    compileOnly project(path: ':downloader')
 }
 publish {
     userOrg = 'just'
@@ -50,5 +51,4 @@ publish {
     publishVersion = '4.1.2'
     desc = 'very easy to build you web page'
     website = "https://github.com/Justson/AgentWeb"
-
 }
